@@ -112,7 +112,8 @@ public:
         RDWR = 4,                           //!< read and write of the file are allowed
         CREAT = 8,                          //!< in case file does not exist no error occurs and file is newly created
         DIRECT = 16,                        //!< I/Os proceed bypassing file system buffers, i.e. unbuffered I/O
-        TRUNC = 32                          //!< once file is opened its length becomes zero
+        TRUNC = 32,                         //!< once file is opened its length becomes zero
+        SYNC = 64,                          //!< open the file with O_SYNC | O_DSYNC | O_RSYNC flags set
     };
 
     static const int DEFAULT_QUEUE = -1;
