@@ -36,13 +36,6 @@ ufs_file_base::ufs_file_base(
 {
     int flags = 0;
 
-#ifndef STXXL_DIRECT_IO_OFF
- #ifndef BOOST_MSVC
-    if (mode & DIRECT)
-        flags |= O_SYNC | O_RSYNC | O_DSYNC | O_DIRECT;
- #endif
-#endif
-
     if (mode & RDONLY)
     {
         flags |= O_RDONLY;
@@ -66,6 +59,20 @@ ufs_file_base::ufs_file_base(
     if (mode & TRUNC)
     {
         flags |= O_TRUNC;
+    }
+
+#ifndef STXXL_DIRECT_IO_OFF
+    if (mode & DIRECT)
+    {
+        flags |= O_DIRECT;
+    }
+#endif
+
+    if (mode & SYNC)
+    {
+        flags |= O_RSYNC;
+        flags |= O_DSYNC;
+        flags |= O_SYNC;
     }
 
 #ifdef BOOST_MSVC
